fix button styling on iOS mobile 1.0

--- a/src/index.css
+++ b/src/index.css
@@ -116,3 +116,6 @@ form {
 .won-hole {
   width: 50px;
 }
+button {
+  -webkit-appearance: none;
+}
